/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 *
 * Copyright (c) 2023-present, Ukama Inc.
 */

syntax="proto3";

option go_package = "specs/controller/spec";

package ukama.testing.network.v1;

// Virtual Node Status update event 
message EvtUpdateVirtnode {
    string uuid = 1;
    string status = 2;
}
